Do not allow closing ScanProgressDialog

BUG: 393275